update study all countries
update study all countries

--- a/study-in-france.html
+++ b/study-in-france.html
@@ -130,7 +130,7 @@
 
 
     <!-- Header Start -->
-    <div class="container-fluid page-header-france-study" style="margin-bottom: 90px;">
+    <div class="container-fluid page-header-france-study">
         <div class="container">
             <div class="d-flex flex-column justify-content-center" style="min-height: 300px">
                 <h3 class="display-4 text-white text-uppercase">France</h3>
@@ -150,9 +150,9 @@
         <div class="container py-5">
             <div class="row">
                 <div class="col-lg-8">
-                    <div class="mb-5">
+                    <div class="mb-3">
                         <!-- <h6 class="text-primary mb-3">Jan 01, 2050</h6> -->
-                        <h1 class="mb-5">Studying abroad is always the best way to discover yourself.</h1>
+                        <h1 class="mb-2">Studying abroad is always the best way to discover yourself.</h1>
                         <img class="img-fluid rounded w-100 mb-4" src="img/study-banner/study_in_france.jpg"
                             alt="Image">
                         <p>Studying abroad can be a life-changing experience. It offers the opportunity to immerse
@@ -165,7 +165,7 @@
                             With proper preparation and an open mind, studying abroad can be an incredibly rewarding
                             adventure that broadens one's horizons and enriches one's life.</p>
                         <h2 class="mb-4">Study in France</h2>
-                        <img class="img-fluid rounded w-50 float-left mr-4 mb-3" src="img/blog-1.jpg" alt="Image">
+                        <img class="img-fluid rounded w-50 float-left mr-4 mb-3" src="img/france/france-study.jpg" alt="Image">
                         <p>If you want to study in a country that is diverse and has an excellent academic reputation,
                             France is the country for you. It is one of the most popular study destinations, making it
                             perfect for international students. The country offers an excellent environment for all
@@ -297,7 +297,7 @@
                     </div> -->
 
                     <!-- Tag Cloud -->
-                    <div class="mb-5">
+                    <!-- <div class="mb-5">
                         <h3 class="text-uppercase mb-4" style="letter-spacing: 5px;">Tag Cloud</h3>
                         <div class="d-flex flex-wrap m-n1">
                             <a href="" class="btn btn-outline-primary m-1">Design</a>
@@ -307,7 +307,7 @@
                             <a href="" class="btn btn-outline-primary m-1">Writing</a>
                             <a href="" class="btn btn-outline-primary m-1">Consulting</a>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- Comment Form -->
                     <div class="bg-secondary rounded p-4">
                         <h3 class="text-uppercase mb-4" style="letter-spacing: 5px;">Leave a comment</h3>
@@ -387,8 +387,8 @@
                             <li>Mont Blanc (Western Europe’s largest mountain)</li>
                         </ul>
 
-                        <h2 class="mb-4">Costs of studying and living in France</h2><br>
-                        <h3 class="mb-4">Study Costs</h3>
+                        <h2 class="mb-2">Costs of studying and living in France</h2><br>
+                        <h3 class="mb-2">Study Costs</h3>
                         <p>France uses the Euro (€) for its currency. Tuition rates at public institutions are set by
                             the government and they are very affordable. In fact, tuition rates at France’s public
                             institutions of higher education are identical for domestic and international students.</p>
