--- a/study-in-ireland.html
+++ b/study-in-ireland.html
@@ -130,7 +130,7 @@
 
 
     <!-- Header Start -->
-    <div class="container-fluid page-header-ireland" style="margin-bottom: 90px;">
+    <div class="container-fluid page-header-ireland">
         <div class="container">
             <div class="d-flex flex-column justify-content-center" style="min-height: 300px">
                 <h3 class="display-4 text-white text-uppercase">Ireland</h3>
@@ -150,7 +150,7 @@
         <div class="container py-5">
             <div class="row">
                 <div class="col-lg-8">
-                    <div class="mb-5">
+                    <div class="mb-8">
                         <!-- <h6 class="text-primary mb-3">Jan 01, 2050</h6> -->
                         <h1 class="mb-5">Studying abroad is always the best way to discover yourself.</h1>
                         <img class="img-fluid rounded w-100 mb-4" src="img/study-banner/study_in_Ireland.jpg"
@@ -165,73 +165,14 @@
                             With proper preparation and an open mind, studying abroad can be an incredibly rewarding
                             adventure that broadens one's horizons and enriches one's life.</p>
                         <h2 class="mb-4">Study in Ireland</h2>
-                        <img class="img-fluid rounded w-50 float-left mr-4 mb-3" src="img/blog-1.jpg" alt="Image">
+                        <img class="img-fluid rounded w-50 float-left mr-4 mb-3" src="img/ireland/ireland-study.jpg"
+                            alt="Image">
                         <p>An island in the North Atlantic, Ireland is separated from Great Britain by the North
                             Channel. Each year, the Irish government invests €728 million in higher education
                             institutions. This allows Ireland to have one of the best higher education systems in the
                             world. University in Ireland would be a great choice for any international
-                            student.<br><br><br><br><br><br><br><br><br><br><br><br>
+                            student.
                         </p>
-                        <h2 class="mb-4">Why study in Ireland</h2>
-                        <p>With many internationally ranked institutions, Ireland is a popular choice for students
-                            from around the world. The country has been consistently acknowledged as a safe and
-                            peaceful city in world rankings, which is complemented by the welcoming nature of the
-                            Irish people.</p>
-                        <p>Higher education is provided by different types of institutions. These are universities,
-                            colleges of education and institutes of technology. All of the Irish universities are
-                            public and therefore state-funded. Five of Ireland’s universities are in the 2023 QS
-                            World University Rankings top 500. The highest ranked of these is Trinity College Dublin
-                            – University of Dublin, which is placed at 98th. The next highest ranked is the
-                            University College Dublin, which is placed at =181st.</p>
-                        <p>The academic year observed in Ireland is similar to other European countries, and
-                            generally runs from September through to June/July depending on the examination period.
-                            There are courses offered at the traditional levels of study. These include bachelors,
-                            masters and doctoral, as well as diplomas and other types.
-
-                        </p>
-
-                        <h2 class="mb-4">About Ireland</h2>
-                        <p>Located to the west of Great Britain and east of Canada and the USA, Ireland is an island
-                            nation with a population of over 6.5 million people. This makes it the second most populous
-                            island in Europe. Whilst Ireland is one single piece of land, it is politically divided into
-                            two areas. These are the Republic of Ireland (referred to sometimes as just Ireland) and
-                            Northern Ireland, which is part of the United Kingdom. This division came after many
-                            disagreements and is still a topic of political conversation today. Despite the scarring
-                            still seen across Ireland, both parts are beautiful and welcoming.</p>
-                        <p>Human presence in Ireland dates back over 12,500 years ago to 10,500 BCE. Since then, there
-                            has been a constant battle over who rules the island. Located in Ireland are three UNESCO
-                            World Heritage Sites, including the Giant’s Causeway. Dublin is the most heavily touristy
-                            area and has many attractions, such as Book of Kells and the Guinness Storehouse.</p>
-                        <p>The culture in Ireland is heavily influenced by religion and the Gaelic and Celtic history.
-                            Religion has played a significant role in the history of Ireland, and has caused many
-                            disagreements. Famously, Northern Ireland and the Republic of Ireland have different
-                            majority religions; Protestant and Catholic. Since the 20th century, you can find influences
-                            of Irish culture worldwide, including Irish pubs and food.</p>
-
-                        <h2 class="mb-4">Costs of studying and living in Ireland</h2>
-                        <p>Ireland uses the Euro (€) as its currency.</p>
-                        <p>The tuition fees you will pay in Ireland will vary depending on where you choose to study and
-                            where you are from. Ireland operates a Free Fees Initiative for full-time undergraduate
-                            study. If you are an EU student studying at a public university, you will not pay tuition
-                            fees. If you are an EU student not studying at a public university or studying a
-                            postgraduate programme, you will have to pay fees. Even if you are not required to pay
-                            tuition fees, you will likely have to pay a registration fee of around €3,000. If you are
-                            from anywhere else in the world, you will need to pay fees no matter what level of study you
-                            are taking and where you are studying. On average you should expect to pay between €5,000
-                            and €10,000 per year. You may be eligible for a scholarship to help finance your studies,
-                            check with your chosen institution for information.</p>
-                        <p>In terms of living costs, Ireland is very similar to other European countries. If you choose
-                            to live in a bigger city, you will pay more than smaller cities and towns. On average, it is
-                            recommended that you budget for between €500 and €800 per month. This accounts for
-                            accommodation, groceries and travel. Another cost that students need to consider is health
-                            insurance. If you are an EHIC card holder, you will be able to access any healthcare you
-                            require for free. If you are not an EHIC card holder, you will need to ensure you have valid
-                            health insurance. If you already have a policy in your home country, you will need to make
-                            sure it is valid in Ireland. If you do not have insurance already, you will need to purchase
-                            a policy that will cover you for the duration of your studies. If you require guidance about
-                            health insurance, contact your institution.</p>
-
-
                     </div>
 
                     <!-- Comment List -->
@@ -392,6 +333,82 @@
                                     class="btn btn-primary py-md-2 px-md-4 font-weight-semi-bold">
                             </div>
                         </form>
+                    </div>
+                </div>
+
+                <div class="col-lg-12">
+                    <div class="mb-3">
+                        <h2 class="mb-3">Why study in Ireland</h2>
+                        <p>With many internationally ranked institutions, Ireland is a popular choice for students
+                            from around the world. The country has been consistently acknowledged as a safe and
+                            peaceful city in world rankings, which is complemented by the welcoming nature of the
+                            Irish people.</p>
+                        <p>Higher education is provided by different types of institutions. These are universities,
+                            colleges of education and institutes of technology. All of the Irish universities are
+                            public and therefore state-funded. Five of Ireland’s universities are in the 2023 QS
+                            World University Rankings top 500. The highest ranked of these is Trinity College Dublin
+                            – University of Dublin, which is placed at 98th. The next highest ranked is the
+                            University College Dublin, which is placed at =181st.</p>
+                        <p>The academic year observed in Ireland is similar to other European countries, and
+                            generally runs from September through to June/July depending on the examination period.
+                            There are courses offered at the traditional levels of study. These include bachelors,
+                            masters and doctoral, as well as diplomas and other types.
+
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-lg-12">
+                    <div class="mb-3">
+                        <h2 class="mb-4">About Ireland</h2>
+                        <img class="img-fluid float-right rounded w-20 mr-4 mb-3" style="width: 40%; height: 500px;"
+                            src="img/ireland/ireland-1.jpg" alt="Image">
+                        <p>Located to the west of Great Britain and east of Canada and the USA, Ireland is an island
+                            nation with a population of over 6.5 million people. This makes it the second most populous
+                            island in Europe. Whilst Ireland is one single piece of land, it is politically divided into
+                            two areas. These are the Republic of Ireland (referred to sometimes as just Ireland) and
+                            Northern Ireland, which is part of the United Kingdom. This division came after many
+                            disagreements and is still a topic of political conversation today. Despite the scarring
+                            still seen across Ireland, both parts are beautiful and welcoming.</p>
+                        <p>Human presence in Ireland dates back over 12,500 years ago to 10,500 BCE. Since then, there
+                            has been a constant battle over who rules the island. Located in Ireland are three UNESCO
+                            World Heritage Sites, including the Giant’s Causeway. Dublin is the most heavily touristy
+                            area and has many attractions, such as Book of Kells and the Guinness Storehouse.</p>
+                        <p>The culture in Ireland is heavily influenced by religion and the Gaelic and Celtic history.
+                            Religion has played a significant role in the history of Ireland, and has caused many
+                            disagreements. Famously, Northern Ireland and the Republic of Ireland have different
+                            majority religions; Protestant and Catholic. Since the 20th century, you can find influences
+                            of Irish culture worldwide, including Irish pubs and food.</p>
+                    </div>
+                </div>
+
+                <div class="col-lg-12">
+                    <div class="mb-3">
+
+                        <h2 class="mb-4">Costs of studying and living in Ireland</h2>
+                        <p>Ireland uses the Euro (€) as its currency.</p>
+                        <p>The tuition fees you will pay in Ireland will vary depending on where you choose to study and
+                            where you are from. Ireland operates a Free Fees Initiative for full-time undergraduate
+                            study. If you are an EU student studying at a public university, you will not pay tuition
+                            fees. If you are an EU student not studying at a public university or studying a
+                            postgraduate programme, you will have to pay fees. Even if you are not required to pay
+                            tuition fees, you will likely have to pay a registration fee of around €3,000. If you are
+                            from anywhere else in the world, you will need to pay fees no matter what level of study you
+                            are taking and where you are studying. On average you should expect to pay between €5,000
+                            and €10,000 per year. You may be eligible for a scholarship to help finance your studies,
+                            check with your chosen institution for information.</p>
+                        <img class="img-fluid float-left rounded w-20 mr-4 mb-3" style="width: 40%; height: 300px;"
+                            src="img/ireland/ireland-2.jpg" alt="Image">
+                        <p>In terms of living costs, Ireland is very similar to other European countries. If you choose
+                            to live in a bigger city, you will pay more than smaller cities and towns. On average, it is
+                            recommended that you budget for between €500 and €800 per month. This accounts for
+                            accommodation, groceries and travel. Another cost that students need to consider is health
+                            insurance. If you are an EHIC card holder, you will be able to access any healthcare you
+                            require for free. If you are not an EHIC card holder, you will need to ensure you have valid
+                            health insurance. If you already have a policy in your home country, you will need to make
+                            sure it is valid in Ireland. If you do not have insurance already, you will need to purchase
+                            a policy that will cover you for the duration of your studies. If you require guidance about
+                            health insurance, contact your institution.</p>
                     </div>
                 </div>
                 <!-- Team Start -->
