--- a/study-in-singapore.html
+++ b/study-in-singapore.html
@@ -130,7 +130,7 @@
 
 
     <!-- Header Start -->
-    <div class="container-fluid page-header-singapore-study" style="margin-bottom: 90px;">
+    <div class="container-fluid page-header-singapore-study">
         <div class="container">
             <div class="d-flex flex-column justify-content-center" style="min-height: 300px">
                 <h3 class="display-4 text-white text-uppercase">Singapore</h3>
@@ -153,7 +153,7 @@
         <div class="container py-5">
             <div class="row">
                 <div class="col-lg-8">
-                    <div class="mb-5">
+                    <div class="mb-3">
                         <!-- <h6 class="text-primary mb-3">Jan 01, 2050</h6> -->
                         <h1 class="mb-5">Studying abroad is always the best way to discover yourself.</h1>
                         <img class="img-fluid rounded w-100 mb-4" src="img/study-banner/study-in-singapore.png"
@@ -180,33 +180,7 @@
                             Overall, studying in Singapore is a fantastic opportunity for students who are looking to
                             gain a world-class education, experience a new culture, and prepare for a successful career
                             in the global marketplace.</p>
-                        <h2 class="mb-4">Why Study in Singapore ?</h2>
-                        <img class="img-fluid rounded w-50 float-left mr-4 mb-3" src="img/about-singapore.jpg"
-                            alt="Image">
-                        <p class="">Singapore is a small island nation located in Southeast Asia that has gained a
-                            reputation as
-                            a world-class education hub. There are several reasons why students from around the globe
-                            choose to study in Singapore.
-                            Firstly, Singapore has a strong education system with highly respected universities and
-                            institutions. The country consistently ranks high in global education rankings, and its
-                            universities are recognized for their academic excellence, research capabilities, and
-                            innovative teaching methods.
-                            Secondly, Singapore is a multicultural and cosmopolitan city-state that offers a diverse and
-                            rich cultural experience. Students can immerse themselves in a blend of cultures, customs,
-                            and languages while studying in Singapore. This international exposure can broaden their
-                            horizons and enhance their global perspectives.
-                        </p>
-                        <p>Thirdly, Singapore is a safe and secure country with a low crime rate. This provides a sense
-                            of security for students, making it an ideal destination to study abroad. The country's
-                            efficient public transport system and well-developed infrastructure also make it easy for
-                            students to navigate the city and explore its attractions.
-                            Lastly, Singapore is a hub for business and innovation, making it an ideal destination for
-                            students interested in entrepreneurship and start-ups. The country's strong economy,
-                            favorable business environment, and supportive government policies create opportunities for
-                            students to gain valuable experience and make connections with like-minded individuals.
-                            All in all, studying in Singapore offers students a unique and rewarding experience that can
-                            enhance their academic and personal growth.
-                        </p>
+
 
                     </div>
                 </div>
@@ -263,7 +237,7 @@
                     </div>
 
                     <!-- Recent Post -->
-                    <div class="mb-5">
+                    <!-- <div class="mb-5">
                         <h3 class="text-uppercase mb-4" style="letter-spacing: 5px;">Recent Post</h3>
                         <a class="d-flex align-items-center text-decoration-none mb-3" href="">
                             <img class="img-fluid rounded" src="img/blog-80x80.jpg" alt="">
@@ -286,10 +260,10 @@
                                 <small>Jan 01, 2050</small>
                             </div>
                         </a>
-                    </div>
+                    </div> -->
 
                     <!-- Tag Cloud -->
-                    <div class="mb-5">
+                    <!-- <div class="mb-5">
                         <h3 class="text-uppercase mb-4" style="letter-spacing: 5px;">Tag Cloud</h3>
                         <div class="d-flex flex-wrap m-n1">
                             <a href="" class="btn btn-outline-primary m-1">Design</a>
@@ -299,7 +273,7 @@
                             <a href="" class="btn btn-outline-primary m-1">Writing</a>
                             <a href="" class="btn btn-outline-primary m-1">Consulting</a>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- Comment Form -->
                     <div class="bg-secondary rounded p-4">
                         <h3 class="text-uppercase mb-4" style="letter-spacing: 5px;">Leave a comment</h3>
@@ -329,6 +303,37 @@
                     </div>
                 </div>
 
+                <div class="col-lg-12">
+                    <div class="mb-5">
+                        <h2 class="mb-5">Why Study in Singapore ?</h2>
+                        <img class="img-fluid rounded float-left mr-4 mb-3" style="width: 35%; height: 500px;" src="img/singapore/about-singapore.jpg"
+                            alt="Image">
+                        <p class="">Singapore is a small island nation located in Southeast Asia that has gained a
+                            reputation as
+                            a world-class education hub. There are several reasons why students from around the globe
+                            choose to study in Singapore.
+                            Firstly, Singapore has a strong education system with highly respected universities and
+                            institutions. The country consistently ranks high in global education rankings, and its
+                            universities are recognized for their academic excellence, research capabilities, and
+                            innovative teaching methods.
+                            Secondly, Singapore is a multicultural and cosmopolitan city-state that offers a diverse and
+                            rich cultural experience. Students can immerse themselves in a blend of cultures, customs,
+                            and languages while studying in Singapore. This international exposure can broaden their
+                            horizons and enhance their global perspectives.
+                        </p>
+                        <p>Thirdly, Singapore is a safe and secure country with a low crime rate. This provides a sense
+                            of security for students, making it an ideal destination to study abroad. The country's
+                            efficient public transport system and well-developed infrastructure also make it easy for
+                            students to navigate the city and explore its attractions.
+                            Lastly, Singapore is a hub for business and innovation, making it an ideal destination for
+                            students interested in entrepreneurship and start-ups. The country's strong economy,
+                            favorable business environment, and supportive government policies create opportunities for
+                            students to gain valuable experience and make connections with like-minded individuals.
+                            All in all, studying in Singapore offers students a unique and rewarding experience that can
+                            enhance their academic and personal growth.
+                        </p>
+                    </div>
+                </div>
                 <div class="col-lg-12">
                     <div class="mb-4">
                         <div class="text-center mb-5">
