--- a/study-in-cyprus.html
+++ b/study-in-cyprus.html
@@ -130,7 +130,7 @@
 
 
     <!-- Header Start -->
-    <div class="container-fluid page-header-cyprus-study" style="margin-bottom: 90px;">
+    <div class="container-fluid page-header-cyprus-study">
         <div class="container">
             <div class="d-flex flex-column justify-content-center" style="min-height: 300px">
                 <h3 class="display-4 text-white text-uppercase">Cyprus</h3>
@@ -521,10 +521,10 @@
                                             <p class="m-0"></p>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
-                    </div> -->
+                    </div>
                     <!-- Team End -->
                 </div>
             </div>
